-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 13.0.0
-
None
-
-
ac97ab1ab (13.0)
Steps to reproduce:
- Open https://github.com/mitchcurtis/slate
- Enable two kits (I used dev and 6.5)
- Build and run; you'll get an error about slate.dll not being found
Workaround: switch to another kit, and then switch back, and the file will have been copied to qml/Slate in the build directory.
This works as expected with Creator 12.
- is duplicated by
-
QTCREATORBUG-30664 CMake: library targets are not added to PATH
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-30644 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
553548,2 | CMakePM: Add build artifacts to the PATH env variable | 13.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |